# hades

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.nix
.hades/: memory.jsonl
app/: agent_wiring.cpp  agent_wiring.h  hades_main.cpp
docs/: architecture.md  building.md  manifest-reference.md
docs/research/: 2026-07-05-agent-comms-landscape.md  2026-07-13-mongoose-http-research.md
docs/superpowers/plans/: 2026-06-25-hades-mvp.md  2026-06-29-launcher-pantler.md  2026-06-29-manifest-parser-fail-loud.md  2026-06-29-memory-module.md  2026-06-29-pin-fact-core-memory.md  2026-06-29-run-until-turn-epoch.md  2026-06-29-tool-capability-model.md  2026-06-29-web-ui.md  2026-06-29-worker-offload.md  2026-06-30-configurable-timeouts.md  2026-06-30-get-history-web-render.md  2026-06-30-memory-embeddings.md  2026-06-30-session-resume.md  2026-06-30-turn-abandonment-epoch.md  2026-07-01-memory-injection-framing.md  2026-07-02-skills-system.md  2026-07-02-telegram-front-end.md  2026-07-03-bridge-multi-agent.md  2026-07-04-src-apps-reorg.md  2026-07-05-bridge-protocol.md  2026-07-05-dev-tools.md  2026-07-05-voice-stt.md  2026-07-05-voice-tts.md  2026-07-07-heartbeat-cron.md  2026-07-07-self-scheduling.md  2026-07-08-staleness-guard.md  2026-07-08-when-trigger.md  2026-07-11-core-memory.md  2026-07-11-simplex-frontend.md  2026-07-12-mcp-discovery.md  2026-07-12-save-skill-patch.md  2026-07-16-auto-extract.md  2026-07-16-session-search.md  2026-07-18-http-fetch-extraction.md  2026-07-18-web-search.md
docs/superpowers/specs/: 2026-06-25-hades-agent-harness-design.md  2026-06-29-launcher-pantler-design.md  2026-06-29-manifest-parser-fail-loud-design.md  2026-06-29-memory-module-design.md  2026-06-29-pin-fact-core-memory-design.md  2026-06-29-run-until-turn-epoch-design.md  2026-06-29-tool-capability-model-design.md  2026-06-29-web-ui-design.md  2026-06-29-worker-offload-design.md  2026-06-30-configurable-timeouts-design.md  2026-06-30-get-history-web-render-design.md  2026-06-30-memory-embeddings-design.md  2026-06-30-session-resume-design.md  2026-06-30-turn-abandonment-epoch-design.md  2026-07-01-memory-injection-framing-design.md  2026-07-02-skills-system-design.md  2026-07-02-telegram-front-end-design.md  2026-07-03-bridge-multi-agent-design.md  2026-07-04-src-apps-reorg-design.md  2026-07-05-aarch64-static-cross-design.md  2026-07-05-bridge-protocol-blackboard-vars-design.md  2026-07-05-dev-tools-design.md  2026-07-05-stt-voice-input-design.md  2026-07-05-tts-voice-output-design.md  2026-07-07-heartbeat-cron-design.md  2026-07-07-self-scheduling-design.md  2026-07-08-staleness-guard-design.md  2026-07-08-when-trigger-design.md  2026-07-10-email-tools-design.md  2026-07-11-core-memory-design.md  2026-07-11-simplex-frontend-design.md  2026-07-12-mcp-discovery-design.md  2026-07-12-save-skill-patch-design.md  2026-07-16-auto-extract-design.md  2026-07-16-session-search-design.md  2026-07-18-http-fetch-extraction-design.md  2026-07-18-web-search-design.md
include/hades/: arbiter.h  blackboard.h  config.h  entry.h  eventlog.h  executor.h  history_budget.h  launcher.h  memory_limit.h  module.h  objective.h  prompt.h  serve_config.h  session_history.h  session_id.h  timeouts.h  turn_gate.h  version.h
manifests/: dev.hades  pi.hades
memory/: facts.md
prompts/: daily_summary.txt  soul.md
skills/email/: SKILL.md
src/arbiter/: arbiter.cpp
src/behaviors/: capability_policy.cpp  standard_behaviors.cpp
src/bridge/: cpr_bridge_http.cpp  protocol.cpp
src/config/: manifest.cpp  prompt.cpp  serve_config.cpp
src/core/: blackboard.cpp  config.cpp  eventlog.cpp  executor.cpp  launcher.cpp  session.cpp  session_history.cpp  session_id.cpp  subprocess.cpp  version.cpp
src/embedding/: http_embedding_provider.cpp  indexer.cpp  persistent_child.cpp  session_turns.cpp  subprocess_embedding_provider.cpp  vec_math.cpp  vector_cache.cpp
src/llm/: http_cpr.cpp  openai_compat_provider.cpp
src/memory/: rank.cpp  store.cpp
src/module/: bridge_module.cpp  chat_module.cpp  embedding_memory_module.cpp  http_server_module.cpp  llm_module.cpp  memory_module.cpp  skills_module.cpp  telegram_module.cpp  tool_runner.cpp
src/objective/: avoid_destructive.cpp  capability_policy.cpp  peer_loop_guard.cpp  stay_on_budget.cpp
src/obs/: scope.cpp  scope_main.cpp
src/skills/: scan.cpp
src/stt/: stt_providers.cpp
src/telegram/: cpr_telegram_api.cpp  parse.cpp
src/tool/: mcp_adapter.cpp  registry.cpp  subprocess.cpp
src/tts/: tts_providers.cpp
tests/: fake_mcp_server.sh  test_arbiter.cpp  test_ask_agent_tool.cpp  test_auto_extract_module.cpp  test_auto_extract_wiring.cpp  test_blackboard.cpp  test_bridge_module.cpp  test_bridge_protocol.cpp  test_bridge_registry.cpp  test_bridge_wiring.cpp  test_capability_policy.cpp  test_capability_wiring.cpp  test_chat.cpp  test_core_memory_tool.cpp  test_core_memory_wiring.cpp  test_cron.cpp  test_cron_store.cpp  test_e2e.cpp  test_edit_file_tool.cpp  test_embedding_memory_module.cpp  test_embedding_vec_math.cpp  test_embedding_wiring.cpp  test_eventlog.cpp  test_executor.cpp  test_extract.cpp  test_file_version.cpp  test_git_read_tool.cpp  test_grep_glob_tools.cpp  test_heartbeat_module.cpp  test_heartbeat_wiring.cpp  test_html_text.cpp  test_http_embedding_provider.cpp  test_http_fetch_tool.cpp  test_indexer.cpp  test_launcher.cpp  test_list_cancel_tools.cpp  test_llm_module.cpp  test_manifest.cpp  test_mcp_adapter.cpp  test_mcp_discovery.cpp  (+58 more)
tests/fixtures/: echo_embedder.js
tools/: ask_agent_main.cpp  cancel_task_main.cpp  core_memory_main.cpp  edit_file_main.cpp  embed_reference.py  fs_read_main.cpp  git_read_main.cpp  glob_main.cpp  grep_main.cpp  http_fetch_main.cpp  list_dir_main.cpp  list_tasks_main.cpp  pin_fact_main.cpp  piper_reference.sh  run_command_main.cpp  save_memory_main.cpp  save_skill_main.cpp  schedule_task_main.cpp  session_search_main.cpp  shell_main.cpp  use_skill_main.cpp  web_search_main.cpp  whisper_reference.sh  write_file_main.cpp
web/: app.js  index.html  style.css
(+81 files in other folders)
