cmake_minimum_required(VERSION 3.20)
project(hades LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(cpr REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(GTest REQUIRED)
enable_testing()

add_library(hades_core src/core/version.cpp)
target_include_directories(hades_core PUBLIC include)
target_link_libraries(hades_core PUBLIC nlohmann_json::nlohmann_json cpr::cpr)
target_sources(hades_core PRIVATE src/core/eventlog.cpp)
target_sources(hades_core PRIVATE src/core/blackboard.cpp)
target_sources(hades_core PRIVATE src/config/manifest.cpp)

add_executable(hades_tests tests/test_smoke.cpp)
target_link_libraries(hades_tests PRIVATE hades_core GTest::gtest_main)
target_sources(hades_tests PRIVATE tests/test_eventlog.cpp)
target_sources(hades_tests PRIVATE tests/test_blackboard.cpp)
target_sources(hades_tests PRIVATE tests/test_manifest.cpp)
target_sources(hades_core PRIVATE src/core/launcher.cpp)
target_sources(hades_tests PRIVATE tests/test_launcher.cpp)
target_sources(hades_core PRIVATE src/llm/http_cpr.cpp)
target_sources(hades_core PRIVATE src/llm/openai_compat_provider.cpp)
target_sources(hades_tests PRIVATE tests/test_provider.cpp)
target_sources(hades_core PRIVATE src/module/llm_module.cpp)
target_sources(hades_tests PRIVATE tests/test_llm_module.cpp)
target_sources(hades_core PRIVATE src/tool/subprocess.cpp)
target_sources(hades_tests PRIVATE tests/test_subprocess.cpp)
add_executable(hades-fs-read tools/fs_read_main.cpp)
target_link_libraries(hades-fs-read PRIVATE nlohmann_json::nlohmann_json)
target_sources(hades_core PRIVATE src/tool/registry.cpp)
target_sources(hades_core PRIVATE src/tool/mcp_adapter.cpp)
target_sources(hades_core PRIVATE src/module/tool_runner.cpp)
target_sources(hades_tests PRIVATE tests/test_toolrunner.cpp)
target_compile_definitions(hades_tests PRIVATE FS_READ_BIN="$<TARGET_FILE:hades-fs-read>")
add_dependencies(hades_tests hades-fs-read)
target_sources(hades_core PRIVATE src/objective/stay_on_budget.cpp)
target_sources(hades_core PRIVATE src/objective/avoid_destructive.cpp)
target_sources(hades_tests PRIVATE tests/test_objectives.cpp)
target_sources(hades_core PRIVATE src/arbiter/arbiter.cpp)
target_sources(hades_tests PRIVATE tests/test_arbiter.cpp)
target_sources(hades_core PRIVATE src/module/chat_module.cpp)
target_sources(hades_tests PRIVATE tests/test_chat.cpp)
target_sources(hades_core PRIVATE src/obs/scope.cpp)
add_executable(hades-scope src/obs/scope_main.cpp)
target_link_libraries(hades-scope PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_scope.cpp)

# Task 13: end-to-end agent wiring, the `hades` binary, and the e2e test.
# agent_wiring lives in hades_core so both the binary and the tests share the
# same graph builder. The repo root is on the include path for "app/..." headers.
target_sources(hades_core PRIVATE app/agent_wiring.cpp)
target_include_directories(hades_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(hades app/hades_main.cpp)
target_link_libraries(hades PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_e2e.cpp)
add_dependencies(hades_tests hades-fs-read)
include(GoogleTest)
gtest_discover_tests(hades_tests)
