cmake_minimum_required(VERSION 3.20)
project(hades LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(cpr REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(httplib REQUIRED)
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(READLINE REQUIRED IMPORTED_TARGET readline)   # GNU readline — REPL line editing
enable_testing()

add_library(hades_core src/core/version.cpp)
target_include_directories(hades_core PUBLIC include)
target_link_libraries(hades_core PUBLIC nlohmann_json::nlohmann_json cpr::cpr httplib::httplib Threads::Threads PkgConfig::READLINE)
target_sources(hades_core PRIVATE src/core/eventlog.cpp)
target_sources(hades_core PRIVATE src/core/blackboard.cpp)
target_sources(hades_core PRIVATE src/core/executor.cpp)
target_sources(hades_core PRIVATE src/config/manifest.cpp)
target_sources(hades_core PRIVATE src/config/prompt.cpp)
target_sources(hades_core PRIVATE src/config/serve_config.cpp)
target_sources(hades_core PRIVATE src/memory/rank.cpp)
target_sources(hades_core PRIVATE src/memory/store.cpp)

add_executable(hades_tests tests/test_smoke.cpp)
target_link_libraries(hades_tests PRIVATE hades_core GTest::gtest_main)
target_sources(hades_tests PRIVATE tests/test_serve_config.cpp)
target_sources(hades_tests PRIVATE tests/test_eventlog.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_rank.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_store.cpp)
target_sources(hades_tests PRIVATE tests/test_blackboard.cpp)
target_sources(hades_tests PRIVATE tests/test_executor.cpp)
target_sources(hades_tests PRIVATE tests/test_manifest.cpp)
target_sources(hades_tests PRIVATE tests/test_prompt.cpp)
target_sources(hades_core PRIVATE src/core/launcher.cpp)
target_sources(hades_tests PRIVATE tests/test_launcher.cpp)
target_sources(hades_core PRIVATE src/llm/http_cpr.cpp)
target_sources(hades_core PRIVATE src/llm/openai_compat_provider.cpp)
target_sources(hades_tests PRIVATE tests/test_provider.cpp)
target_sources(hades_core PRIVATE src/module/llm_module.cpp)
target_sources(hades_tests PRIVATE tests/test_llm_module.cpp)
target_sources(hades_core PRIVATE src/tool/subprocess.cpp)
target_sources(hades_tests PRIVATE tests/test_subprocess.cpp)
add_executable(hades-fs-read tools/fs_read_main.cpp)
target_link_libraries(hades-fs-read PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-write-file tools/write_file_main.cpp)
target_link_libraries(hades-write-file PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-list-dir tools/list_dir_main.cpp)
target_link_libraries(hades-list-dir PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-shell tools/shell_main.cpp)
target_link_libraries(hades-shell PRIVATE hades_core)               # reuses run_subprocess
add_executable(hades-http-fetch tools/http_fetch_main.cpp)
target_link_libraries(hades-http-fetch PRIVATE cpr::cpr nlohmann_json::nlohmann_json)
add_executable(hades-save-memory tools/save_memory_main.cpp)
target_link_libraries(hades-save-memory PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-pin-fact tools/pin_fact_main.cpp)
target_link_libraries(hades-pin-fact PRIVATE nlohmann_json::nlohmann_json)
target_sources(hades_core PRIVATE src/tool/registry.cpp)
target_sources(hades_core PRIVATE src/tool/mcp_adapter.cpp)
target_sources(hades_core PRIVATE src/module/tool_runner.cpp)
target_sources(hades_tests PRIVATE tests/test_toolrunner.cpp)
target_compile_definitions(hades_tests PRIVATE FS_READ_BIN="$<TARGET_FILE:hades-fs-read>")
add_dependencies(hades_tests hades-fs-read)
target_sources(hades_tests PRIVATE tests/test_tools.cpp)
target_compile_definitions(hades_tests PRIVATE
  SHELL_BIN="$<TARGET_FILE:hades-shell>"
  WRITE_FILE_BIN="$<TARGET_FILE:hades-write-file>"
  LIST_DIR_BIN="$<TARGET_FILE:hades-list-dir>"
  HTTP_FETCH_BIN="$<TARGET_FILE:hades-http-fetch>")
add_dependencies(hades_tests hades-shell hades-write-file hades-list-dir hades-http-fetch)
target_sources(hades_tests PRIVATE tests/test_save_memory_tool.cpp)
target_compile_definitions(hades_tests PRIVATE SAVE_MEMORY_BIN="$<TARGET_FILE:hades-save-memory>")
add_dependencies(hades_tests hades-save-memory)
target_sources(hades_tests PRIVATE tests/test_pin_fact_tool.cpp)
target_compile_definitions(hades_tests PRIVATE PIN_FACT_BIN="$<TARGET_FILE:hades-pin-fact>")
add_dependencies(hades_tests hades-pin-fact)
target_sources(hades_core PRIVATE src/objective/stay_on_budget.cpp)
target_sources(hades_core PRIVATE src/objective/avoid_destructive.cpp)
target_sources(hades_tests PRIVATE tests/test_objectives.cpp)
target_sources(hades_core PRIVATE src/arbiter/arbiter.cpp)
target_sources(hades_tests PRIVATE tests/test_arbiter.cpp)
target_sources(hades_core PRIVATE src/module/chat_module.cpp)
target_sources(hades_tests PRIVATE tests/test_chat.cpp)
target_sources(hades_core PRIVATE src/module/http_server_module.cpp)
target_sources(hades_tests PRIVATE tests/test_serve.cpp)
target_sources(hades_core PRIVATE src/obs/scope.cpp)
add_executable(hades-scope src/obs/scope_main.cpp)
target_link_libraries(hades-scope PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_scope.cpp)

# Task 13: end-to-end agent wiring, the `hades` binary, and the e2e test.
# agent_wiring lives in hades_core so both the binary and the tests share the
# same graph builder. The repo root is on the include path for "app/..." headers.
target_sources(hades_core PRIVATE app/agent_wiring.cpp)
target_include_directories(hades_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(hades app/hades_main.cpp)
target_link_libraries(hades PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_e2e.cpp)
target_sources(hades_tests PRIVATE tests/test_offload_e2e.cpp)  # live-path LLM offload
add_dependencies(hades_tests hades-fs-read)
target_sources(hades_core PRIVATE src/module/memory_module.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_module.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_pin_fact_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_pantler_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_webui.cpp)
target_compile_definitions(hades_tests PRIVATE
  WEB_INDEX="${CMAKE_CURRENT_SOURCE_DIR}/web/index.html"
  WEB_STYLE="${CMAKE_CURRENT_SOURCE_DIR}/web/style.css"
  WEB_APP="${CMAKE_CURRENT_SOURCE_DIR}/web/app.js"
  DEV_MANIFEST="${CMAKE_CURRENT_SOURCE_DIR}/manifests/dev.hades")
include(GoogleTest)
gtest_discover_tests(hades_tests)
