cmake_minimum_required(VERSION 3.20)
project(hades LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(cpr REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(httplib REQUIRED)
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(READLINE REQUIRED IMPORTED_TARGET readline)   # GNU readline — REPL line editing
enable_testing()

add_library(hades_core src/core/config.cpp)
target_include_directories(hades_core PUBLIC include)
target_link_libraries(hades_core PUBLIC nlohmann_json::nlohmann_json cpr::cpr httplib::httplib Threads::Threads PkgConfig::READLINE)
target_sources(hades_core PRIVATE src/core/eventlog.cpp)
target_sources(hades_core PRIVATE src/core/blackboard.cpp)
target_sources(hades_core PRIVATE src/core/executor.cpp)
target_sources(hades_core PRIVATE src/core/session.cpp)
target_sources(hades_core PRIVATE src/apps/embedding_memory/providers.cpp)
target_sources(hades_core PRIVATE src/stt/stt_providers.cpp)
target_sources(hades_core PRIVATE src/tts/tts_providers.cpp)
target_sources(hades_core PRIVATE src/apps/embedding_memory/embedding_memory.cpp)
target_sources(hades_core PRIVATE src/apps/heartbeat/cron.cpp)
target_sources(hades_core PRIVATE src/apps/heartbeat/when.cpp)
target_sources(hades_core PRIVATE src/apps/heartbeat/cron_store.cpp)
target_sources(hades_core PRIVATE src/apps/heartbeat/heartbeat.cpp)

add_executable(hades_tests tests/test_smoke.cpp)
target_link_libraries(hades_tests PRIVATE hades_core GTest::gtest_main)
target_sources(hades_tests PRIVATE tests/test_serve_config.cpp)
target_sources(hades_tests PRIVATE tests/test_eventlog.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_rank.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_store.cpp)
target_sources(hades_tests PRIVATE tests/test_blackboard.cpp)
target_sources(hades_tests PRIVATE tests/test_executor.cpp)
target_sources(hades_tests PRIVATE tests/test_manifest.cpp)
target_sources(hades_tests PRIVATE tests/test_session_id.cpp)
target_sources(hades_tests PRIVATE tests/test_session_history.cpp)
target_sources(hades_tests PRIVATE tests/test_prompt.cpp)
target_sources(hades_tests PRIVATE tests/test_embedding_vec_math.cpp)
target_sources(hades_tests PRIVATE tests/test_http_embedding_provider.cpp)
target_sources(hades_tests PRIVATE tests/test_subprocess_embedding_provider.cpp)
target_sources(hades_tests PRIVATE tests/test_stt_providers.cpp)
target_sources(hades_tests PRIVATE tests/test_tts_providers.cpp)
target_sources(hades_tests PRIVATE tests/test_stt_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_tts_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_vector_cache.cpp)
target_sources(hades_tests PRIVATE tests/test_indexer.cpp)
target_sources(hades_tests PRIVATE tests/test_embedding_memory_module.cpp)
target_sources(hades_tests PRIVATE tests/test_session_turns.cpp)
target_sources(hades_tests PRIVATE tests/test_skills_scan.cpp)
target_sources(hades_tests PRIVATE tests/test_telegram_parse.cpp)
target_sources(hades_tests PRIVATE tests/test_bridge_protocol.cpp)
target_sources(hades_tests PRIVATE tests/test_bridge_registry.cpp)
target_sources(hades_tests PRIVATE tests/test_cron.cpp)
target_sources(hades_tests PRIVATE tests/test_when.cpp)
target_sources(hades_tests PRIVATE tests/test_cron_store.cpp)
target_sources(hades_tests PRIVATE tests/test_heartbeat_module.cpp)
target_compile_definitions(hades_tests PRIVATE ECHO_EMBEDDER="${CMAKE_SOURCE_DIR}/tests/fixtures/echo_embedder.js")
target_sources(hades_core PRIVATE src/core/launcher.cpp)
target_sources(hades_tests PRIVATE tests/test_launcher.cpp)
target_sources(hades_tests PRIVATE tests/test_provider.cpp)
target_sources(hades_core PRIVATE src/apps/llm/llm.cpp)
target_sources(hades_tests PRIVATE tests/test_llm_module.cpp)
target_sources(hades_core PRIVATE src/core/subprocess.cpp)
target_sources(hades_tests PRIVATE tests/test_subprocess.cpp)
target_sources(hades_tests PRIVATE tests/test_file_version.cpp)
add_executable(hades-fs-read tools/fs_read_main.cpp)
target_link_libraries(hades-fs-read PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-fs-read PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(hades-write-file tools/write_file_main.cpp)
target_link_libraries(hades-write-file PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-write-file PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(hades-list-dir tools/list_dir_main.cpp)
target_link_libraries(hades-list-dir PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-shell tools/shell_main.cpp)
target_link_libraries(hades-shell PRIVATE hades_core)               # reuses run_subprocess
add_executable(hades-http-fetch tools/http_fetch_main.cpp)
target_link_libraries(hades-http-fetch PRIVATE cpr::cpr nlohmann_json::nlohmann_json)
add_executable(hades-save-memory tools/save_memory_main.cpp)
target_link_libraries(hades-save-memory PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-pin-fact tools/pin_fact_main.cpp)
target_link_libraries(hades-pin-fact PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-core-memory tools/core_memory_main.cpp)
target_link_libraries(hades-core-memory PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-core-memory PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_core PRIVATE src/apps/tool_runner/tool_runner.cpp)
target_sources(hades_tests PRIVATE tests/test_toolrunner.cpp)
target_compile_definitions(hades_tests PRIVATE FS_READ_BIN="$<TARGET_FILE:hades-fs-read>")
add_dependencies(hades_tests hades-fs-read)
target_sources(hades_tests PRIVATE tests/test_tools.cpp)
target_compile_definitions(hades_tests PRIVATE
  SHELL_BIN="$<TARGET_FILE:hades-shell>"
  WRITE_FILE_BIN="$<TARGET_FILE:hades-write-file>"
  LIST_DIR_BIN="$<TARGET_FILE:hades-list-dir>"
  HTTP_FETCH_BIN="$<TARGET_FILE:hades-http-fetch>")
add_dependencies(hades_tests hades-shell hades-write-file hades-list-dir hades-http-fetch)
target_sources(hades_tests PRIVATE tests/test_save_memory_tool.cpp)
target_compile_definitions(hades_tests PRIVATE SAVE_MEMORY_BIN="$<TARGET_FILE:hades-save-memory>")
add_dependencies(hades_tests hades-save-memory)
target_sources(hades_tests PRIVATE tests/test_pin_fact_tool.cpp)
target_compile_definitions(hades_tests PRIVATE PIN_FACT_BIN="$<TARGET_FILE:hades-pin-fact>")
add_dependencies(hades_tests hades-pin-fact)
target_sources(hades_tests PRIVATE tests/test_core_memory_tool.cpp)
target_compile_definitions(hades_tests PRIVATE CORE_MEMORY_BIN="$<TARGET_FILE:hades-core-memory>")
add_dependencies(hades_tests hades-core-memory)
add_executable(hades-use-skill tools/use_skill_main.cpp)
target_link_libraries(hades-use-skill PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-use-skill PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_tests PRIVATE tests/test_use_skill_tool.cpp)
target_compile_definitions(hades_tests PRIVATE USE_SKILL_BIN="$<TARGET_FILE:hades-use-skill>")
add_dependencies(hades_tests hades-use-skill)
add_executable(hades-save-skill tools/save_skill_main.cpp)
target_link_libraries(hades-save-skill PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-save-skill PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_tests PRIVATE tests/test_save_skill_tool.cpp)
target_compile_definitions(hades_tests PRIVATE SAVE_SKILL_BIN="$<TARGET_FILE:hades-save-skill>")
add_dependencies(hades_tests hades-save-skill)
add_executable(hades-ask-agent tools/ask_agent_main.cpp)
target_link_libraries(hades-ask-agent PRIVATE hades_core)            # protocol + cpr (shell precedent)
target_sources(hades_tests PRIVATE tests/test_ask_agent_tool.cpp)
target_compile_definitions(hades_tests PRIVATE ASK_AGENT_BIN="$<TARGET_FILE:hades-ask-agent>")
add_dependencies(hades_tests hades-ask-agent)
add_executable(hades-schedule-task tools/schedule_task_main.cpp
               src/apps/heartbeat/cron_store.cpp src/apps/heartbeat/cron.cpp
               src/apps/heartbeat/when.cpp)
target_link_libraries(hades-schedule-task PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-schedule-task PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_tests PRIVATE tests/test_schedule_task_tool.cpp)
target_compile_definitions(hades_tests PRIVATE SCHEDULE_TASK_BIN="$<TARGET_FILE:hades-schedule-task>")
add_dependencies(hades_tests hades-schedule-task)
add_executable(hades-list-tasks tools/list_tasks_main.cpp src/apps/heartbeat/cron_store.cpp)
target_link_libraries(hades-list-tasks PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-list-tasks PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(hades-cancel-task tools/cancel_task_main.cpp src/apps/heartbeat/cron_store.cpp)
target_link_libraries(hades-cancel-task PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-cancel-task PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_tests PRIVATE tests/test_list_cancel_tools.cpp)
target_compile_definitions(hades_tests PRIVATE LIST_TASKS_BIN="$<TARGET_FILE:hades-list-tasks>")
target_compile_definitions(hades_tests PRIVATE CANCEL_TASK_BIN="$<TARGET_FILE:hades-cancel-task>")
add_dependencies(hades_tests hades-list-tasks hades-cancel-task)
add_executable(hades-grep tools/grep_main.cpp)
target_link_libraries(hades-grep PRIVATE nlohmann_json::nlohmann_json)
add_executable(hades-glob tools/glob_main.cpp)
target_link_libraries(hades-glob PRIVATE nlohmann_json::nlohmann_json)
target_sources(hades_tests PRIVATE tests/test_grep_glob_tools.cpp)
target_compile_definitions(hades_tests PRIVATE
  GREP_BIN="$<TARGET_FILE:hades-grep>"
  GLOB_BIN="$<TARGET_FILE:hades-glob>")
add_dependencies(hades_tests hades-grep hades-glob)
add_executable(hades-edit-file tools/edit_file_main.cpp)
target_link_libraries(hades-edit-file PRIVATE nlohmann_json::nlohmann_json)
target_include_directories(hades-edit-file PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(hades_tests PRIVATE tests/test_edit_file_tool.cpp)
target_compile_definitions(hades_tests PRIVATE EDIT_FILE_BIN="$<TARGET_FILE:hades-edit-file>")
add_dependencies(hades_tests hades-edit-file)
add_executable(hades-git-read tools/git_read_main.cpp)
target_link_libraries(hades-git-read PRIVATE hades_core)            # run_subprocess
target_sources(hades_tests PRIVATE tests/test_git_read_tool.cpp)
target_compile_definitions(hades_tests PRIVATE GIT_READ_BIN="$<TARGET_FILE:hades-git-read>")
add_dependencies(hades_tests hades-git-read)
add_executable(hades-run-command tools/run_command_main.cpp)
target_link_libraries(hades-run-command PRIVATE hades_core)         # run_subprocess
target_sources(hades_tests PRIVATE tests/test_run_command_tool.cpp)
target_compile_definitions(hades_tests PRIVATE RUN_COMMAND_BIN="$<TARGET_FILE:hades-run-command>")
add_dependencies(hades_tests hades-run-command)
target_sources(hades_core PRIVATE src/behaviors/standard_behaviors.cpp)
target_sources(hades_core PRIVATE src/behaviors/capability_policy.cpp)
target_sources(hades_tests PRIVATE tests/test_objectives.cpp)
target_sources(hades_tests PRIVATE tests/test_capability_policy.cpp)
target_sources(hades_tests PRIVATE tests/test_capability_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_peer_loop_guard.cpp)
target_sources(hades_core PRIVATE src/apps/arbiter/arbiter.cpp)
target_sources(hades_tests PRIVATE tests/test_arbiter.cpp)
target_sources(hades_core PRIVATE src/apps/chat/chat.cpp)
target_sources(hades_tests PRIVATE tests/test_chat.cpp)
target_sources(hades_core PRIVATE src/apps/serve/serve.cpp)
target_sources(hades_tests PRIVATE tests/test_serve.cpp)
target_sources(hades_core PRIVATE src/apps/telegram/telegram.cpp)
target_sources(hades_tests PRIVATE tests/test_telegram_module.cpp)
target_sources(hades_tests PRIVATE tests/test_turn_gate.cpp)
target_sources(hades_core PRIVATE src/apps/bridge/bridge.cpp)
target_sources(hades_tests PRIVATE tests/test_bridge_module.cpp)
target_sources(hades_core PRIVATE src/apps/scope/scope.cpp)
add_executable(hades-scope src/apps/scope/scope_main.cpp)
target_link_libraries(hades-scope PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_scope.cpp)

# Task 13: end-to-end agent wiring, the `hades` binary, and the e2e test.
# agent_wiring lives in hades_core so both the binary and the tests share the
# same graph builder. The repo root is on the include path for "app/..." headers.
target_sources(hades_core PRIVATE app/agent_wiring.cpp)
target_include_directories(hades_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(hades app/hades_main.cpp)
target_link_libraries(hades PRIVATE hades_core)
target_sources(hades_tests PRIVATE tests/test_e2e.cpp)
target_sources(hades_tests PRIVATE tests/test_offload_e2e.cpp)  # live-path LLM offload
target_sources(hades_tests PRIVATE tests/test_staleness_e2e.cpp)
add_dependencies(hades_tests hades-fs-read)
target_sources(hades_core PRIVATE src/apps/memory/memory.cpp)
target_sources(hades_core PRIVATE src/apps/skills/skills.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_module.cpp)
target_sources(hades_tests PRIVATE tests/test_skills_module.cpp)
target_sources(hades_tests PRIVATE tests/test_memory_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_pin_fact_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_pantler_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_embedding_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_skills_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_telegram_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_bridge_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_heartbeat_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_self_schedule_guard.cpp)
target_sources(hades_tests PRIVATE tests/test_self_scheduling_wiring.cpp)
target_sources(hades_tests PRIVATE tests/test_webui.cpp)
target_compile_definitions(hades_tests PRIVATE
  WEB_INDEX="${CMAKE_CURRENT_SOURCE_DIR}/web/index.html"
  WEB_STYLE="${CMAKE_CURRENT_SOURCE_DIR}/web/style.css"
  WEB_APP="${CMAKE_CURRENT_SOURCE_DIR}/web/app.js"
  DEV_MANIFEST="${CMAKE_CURRENT_SOURCE_DIR}/manifests/dev.hades")
include(GoogleTest)
gtest_discover_tests(hades_tests)
